--- a/clients/android/app/src/main/res/values/strings.xml
+++ b/clients/android/app/src/main/res/values/strings.xml
@@ -114,4 +114,28 @@
     <string name="dialog_duration_minutes_label">Minutes</string>
     <string name="dialog_duration_days_label">Days</string>
     <string name="dialog_duration_error">Your duration cannot be less than 15 minutes.</string>
+
+    <string name="handwriting_editor_pallete_red">Red</string>
+    <string name="handwriting_editor_pallete_blue">Blue</string>
+    <string name="handwriting_editor_pallete_white">White</string>
+    <string name="handwriting_editor_pallete_yellow">Yellow</string>
+
+    <array name="handwriting_editor_pallete_colors">
+        <item>@string/handwriting_editor_pallete_white</item>
+        <item>@string/handwriting_editor_pallete_yellow</item>
+        <item>@string/handwriting_editor_pallete_red</item>
+        <item>@string/handwriting_editor_pallete_blue</item>
+    </array>
+
+    <string name="handwriting_editor_pen_1">1dp</string>
+    <string name="handwriting_editor_pen_2">5dp</string>
+    <string name="handwriting_editor_pen_3">15dp</string>
+    <string name="handwriting_editor_pen_4">20dp</string>
+
+    <array name="handwriting_editor_pen_size">
+        <item>@string/handwriting_editor_pen_1</item>
+        <item>@string/handwriting_editor_pen_2</item>
+        <item>@string/handwriting_editor_pen_3</item>
+        <item>@string/handwriting_editor_pen_4</item>
+    </array>
 </resources>
