--- a/clients/android/app/src/main/res/values/strings.xml
+++ b/clients/android/app/src/main/res/values/strings.xml
@@ -114,4 +114,5 @@
     <string name="dialog_duration_minutes_label">Minutes</string>
     <string name="dialog_duration_days_label">Days</string>
     <string name="dialog_duration_error">Your duration cannot be less than 15 minutes.</string>
+    <string name="overflow">Overflow</string>
 </resources>
