resolved linting issues

--- a/clients/android/app/src/main/res/values/strings.xml
+++ b/clients/android/app/src/main/res/values/strings.xml
@@ -131,6 +131,9 @@
     <string name="handwriting_editor_pen_2">5dp</string>
     <string name="handwriting_editor_pen_3">15dp</string>
     <string name="handwriting_editor_pen_4">20dp</string>
+    <string name="list_files_create_folder">Create a new folder.</string>
+    <string name="list_files_create_document">Create a new document.</string>
+    <string name="list_files_create_file">Create a new file.</string>
 
     <array name="handwriting_editor_pen_size">
         <item>@string/handwriting_editor_pen_1</item>
