--- a/clients/android/app/src/main/res/values/strings.xml
+++ b/clients/android/app/src/main/res/values/strings.xml
@@ -145,6 +145,7 @@
     <string name="menu_list_files_move">Move file</string>
     <string name="default_value">ERROR</string>
     <string name="dialog_rename_file_title">Rename File</string>
+    <string name="popup_info_title">File Info</string>
 
     <array name="handwriting_editor_pen_size">
         <item>@string/handwriting_editor_pen_1</item>
