--- a/clients/android/app/src/main/res/values/strings.xml
+++ b/clients/android/app/src/main/res/values/strings.xml
@@ -152,8 +152,11 @@
     <string name="menu_markdown_bold">Insert bold text</string>
     <string name="menu_markdown_title">Insert title</string>
     <string name="menu_markdown_image">Insert image</string>
-    <string name="move_file_cancel">Cancel</string>
+    <string name="cancel">Cancel</string>
     <string name="move_file_confirm">Move to this folder</string>
+    <string name="text_editor_hint">Type here</string>
+    <string name="rename_file_rename">Rename</string>
+    <string name="create_file_create">Create</string>
 
     <array name="handwriting_editor_pen_size">
         <item>@string/handwriting_editor_pen_1</item>
