implemented preferences, icon, adapters, and now have to implement the update

--- a/clients/android/app/src/main/res/values/strings.xml
+++ b/clients/android/app/src/main/res/values/strings.xml
@@ -157,6 +157,8 @@
     <string name="text_editor_hint">Type here</string>
     <string name="rename_file_rename">Rename</string>
     <string name="create_file_create">Create</string>
+    <string name="menu_list_files_linear_layout">Linear File Layout</string>
+    <string name="menu_list_files_grid_layout">Grid File Layout</string>
 
     <array name="handwriting_editor_pen_size">
         <item>@string/handwriting_editor_pen_1</item>
