added extension field for creating a file

--- a/clients/android/app/src/main/res/values/strings.xml
+++ b/clients/android/app/src/main/res/values/strings.xml
@@ -159,6 +159,7 @@
     <string name="create_file_create">Create</string>
     <string name="menu_list_files_linear_layout">List</string>
     <string name="menu_list_files_grid_layout">Grid</string>
+    <string name="dialog_file_extension">File Ext.</string>
 
     <array name="handwriting_editor_pen_size">
         <item>@string/handwriting_editor_pen_1</item>
