a lot of ease of use changes

--- a/clients/android/app/src/main/res/values/strings.xml
+++ b/clients/android/app/src/main/res/values/strings.xml
@@ -160,6 +160,7 @@
     <string name="menu_list_files_linear_layout">List</string>
     <string name="menu_list_files_grid_layout">Grid</string>
     <string name="dialog_file_extension">File Ext.</string>
+    <string name="dialog_file_folder">Folder Name</string>
 
     <array name="handwriting_editor_pen_size">
         <item>@string/handwriting_editor_pen_1</item>
