--- a/clients/android/app/src/main/res/values/strings.xml
+++ b/clients/android/app/src/main/res/values/strings.xml
@@ -55,8 +55,6 @@
     <string name="settings_protect_account_biometric">Biometric options</string>
 
     <string name="biometrics_save">Save</string>
-    <string name="biometrics_cancel">Cancel</string>
-    <string name="biometrics_title">Protect your key with biometrics.</string>
 
     <string name="biometric_disabled">Disabled</string>
     <string name="biometric_recommended">Protect key export with biometrics (recommended)</string>
@@ -214,6 +212,10 @@
     <string name="basic_error">An error has occurred.</string>
     <string name="settings_protect_account_biometric_summary">Secure your account with biometrics.</string>
 
+    <string name="biometrics_title">Lockbook Biometric Verification</string>
+    <string name="biometrics_subtitle">Verify your identity to access Lockbook.</string>
+    <string name="biometrics_cancel">Cancel</string>
+
     <array name="drawing_pen_size">
         <item>@string/drawing_pen_1</item>
         <item>@string/drawing_pen_2</item>
@@ -235,31 +237,31 @@
         <item>@string/biometric_strict_value</item>
     </array>
 
-    <string name="biometric_key">biometric</string>
-    <string name="biometric_none_value">biometric_none</string>
-    <string name="biometric_recommended_value">biometric_recommended</string>
-    <string name="biometric_strict_value">biometric_strict</string>
+    <string name="biometric_key" translatable="false">biometric</string>
+    <string name="biometric_none_value" translatable="false">biometric_none</string>
+    <string name="biometric_recommended_value" translatable="false">biometric_recommended</string>
+    <string name="biometric_strict_value" translatable="false">biometric_strict</string>
 
-    <string name="export_account_raw_key">export_account_raw</string>
-    <string name="export_account_qr_key">export_account_qr</string>
+    <string name="export_account_raw_key" translatable="false">export_account_raw</string>
+    <string name="export_account_qr_key" translatable="false">export_account_qr</string>
 
-    <string name="sort_files_key">sort_files</string>
-    <string name="sort_files_a_z">sort_files_a_z</string>
-    <string name="sort_files_z_a">sort_files_z_a</string>
-    <string name="sort_files_type">sort_files_type</string>
-    <string name="sort_files_first_changed">sort_files_first_changed</string>
-    <string name="sort_files_last_changed">sort_files_last_changed</string>
+    <string name="sort_files_key" translatable="false">sort_files</string>
+    <string name="sort_files_a_z_value" translatable="false">sort_files_a_z</string>
+    <string name="sort_files_z_a_value" translatable="false">sort_files_z_a</string>
+    <string name="sort_files_type_value" translatable="false">sort_files_type</string>
+    <string name="sort_files_first_changed_value" translatable="false">sort_files_first_changed</string>
+    <string name="sort_files_last_changed_value" translatable="false">sort_files_last_changed</string>
 
-    <string name="background_sync_period_key">background_sync_period</string>
-    <string name="background_sync_enabled_key">background_sync_enabled</string>
-    <string name="sync_automatically_key">sync_automatically_in_app</string>
+    <string name="background_sync_period_key" translatable="false">background_sync_period</string>
+    <string name="background_sync_enabled_key" translatable="false">background_sync_enabled</string>
+    <string name="sync_automatically_key" translatable="false">sync_automatically_in_app</string>
 
-    <string name="view_logs_key">view_logs</string>
-    <string name="clear_logs_key">clear_logs</string>
+    <string name="view_logs_key" translatable="false">view_logs</string>
+    <string name="clear_logs_key" translatable="false">clear_logs</string>
 
-    <string name="file_layout_key">file_layout</string>
-    <string name="file_layout_grid_value">file_layout</string>
-    <string name="file_layout_linear_value">linear_layout</string>
+    <string name="file_layout_key" translatable="false">file_layout</string>
+    <string name="file_layout_grid_value" translatable="false">grid_layout</string>
+    <string name="file_layout_linear_value" translatable="false">linear_layout</string>
 
-    <string name="open_new_doc_automatically_key">open_new_doc_automatically</string>
+    <string name="open_new_doc_automatically_key" translatable="false">open_new_doc_automatically</string>
 </resources>
