--- a/clients/android/app/src/main/res/values/strings.xml
+++ b/clients/android/app/src/main/res/values/strings.xml
@@ -168,6 +168,8 @@
     <string name="create_file_hint_document_extension">Document Ext.</string>
     <string name="create_file_hint_drawing_extension">Drawing Ext.</string>
 
+    <string name="drawing_fullscreen_description">Fullscreen</string>
+    <string name="drawing_exit_fullscreen_description">Exit Fullscreen</string>
     <string name="drawing_eraser_description">Eraser</string>
     <string name="drawing_pen_description">Pen</string>
     <string name="drawing_pen_small_description">Small</string>
