android: split screen on larger displays (#901)
* intermediate work

* almost done

* more work

* you are able to edit and draw on files with split screen

* fully functioning except for small devices

* two pane layout fully works

* fixed bugs involving rename and drawingview

* fixed back button and other bugs

* created a fragment for processing files, fixed delete bugs, optimized sliding pane layout, smoother rotation for drawingview, and more

* fixed settings bug

* updated gradle in dockerfile

* make drawing auto save work correctly

* fixed another save error and attempted to fix failing tests from gradle update

* fixed tests

* fixed kotlin interface tests

--- a/clients/android/app/src/main/res/values/strings.xml
+++ b/clients/android/app/src/main/res/values/strings.xml
@@ -42,6 +42,8 @@
     <string name="popup_info_file_type">File Type: %s</string>
     <string name="popup_info_metadata_version">Metadata Version: %s</string>
 
+    <string name="success_delete">Your selected file(s) have been deleted.</string>
+
     <string name="last_synced">Last synced: %s</string>
     <string name="never_synced">never</string>
     <string name="pop_up_info_never_synced">never synced</string>
@@ -168,6 +170,8 @@
     <string name="create_file_hint_document_extension">Document Ext.</string>
     <string name="create_file_hint_drawing_extension">Drawing Ext.</string>
 
+    <string name="drawing_fullscreen_description">Fullscreen</string>
+    <string name="drawing_exit_fullscreen_description">Exit Fullscreen</string>
     <string name="drawing_eraser_description">Eraser</string>
     <string name="drawing_pen_description">Pen</string>
     <string name="drawing_pen_small_description">Small</string>
